# fizz

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
examples/: CMakeLists.txt  raylib_Draw.h
examples/cloth/: CMakeLists.txt  main.cpp
examples/pendulum/: CMakeLists.txt  Pendulum.cpp  Pendulum.h  main.cpp
examples/pogo/: CMakeLists.txt  main.cpp
include/: constants.h  dvec.h  solver.h  system.h  systems.h  util.h
include/fizz/: Body.h  Constants.h  Constraint.h  DVec.h  Draw.h  System.h  Util.h
include/fizz/constraint/: DistanceConstraint.h  PositionConstraint.h  SpringConstraint.h
include/fizz/constraints/: DistanceConstraint.h  PositionConstraint.h  SpringConstraint.h
include/fizz/core/: Body.h  Constraint.h  System.h  Util.h
include/fizz/systems/: Pendulum.h
python/: PyAPI.cpp
python/fizz/: __init__.py  draw.py  system.py
src/: Body.cpp  CMakeLists.txt  Constraint.cpp  DVec.cpp  Draw.cpp  PyAPI.cpp  System.cpp  Util.cpp  dvec.cpp  main.cpp  solver.cpp  system.cpp  systems.cpp  util.cpp
src/constraint/: CMakeLists.txt  DistanceConstraint.cpp  PositionConstraint.cpp  SpringConstraint.cpp
src/constraints/: DistanceConstraint.cpp  PositionConstraint.cpp  SpringConstraint.cpp
src/core/: Body.cpp  CMakeLists.txt  Constraint.cpp  DVec.cpp  System.cpp  Util.cpp
src/systems/: CMakeLists.txt  Pendulum.cpp
